[package]
name = "touch_macroboard_rust_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
evdev = "0.11.4"
gdnative = { git = "https://github.com/godot-rust/godot-rust.git", features = ["custom-godot"] }
nix = "0.23.1"
