[package]
name = "dreamdeck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
russh = { version = "0.38.0", features = ["openssl"] }
russh-keys = { version = "0.38.0", features = ["openssl"] }
async-trait = "0.1.73"
anyhow = "1.0.75"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
chrono = "0.4.31"
async-ssh2-tokio = "0.7.1"
osshkeys = "0.7.0"
