[package]
name = "dreamdeck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = ["experimental-threads"] }
russh = { version = "0.45.0", features = ["openssl"] }
russh-keys = { version = "0.45.0", features = ["openssl"] }
async-trait = "0.1.82"
anyhow = "1.0.89"
async-std = { version = "1.13.0", features = ["attributes", "tokio1"] }
chrono = "0.4.38"
async-ssh2-tokio = "0.8.12"
osshkeys = "0.7.0"
